style.css
/* ... */
.social-icon {
  font-size: 1.5rem;
  color: #ecf0f1;
  transition: color 0.3s ease;
}
.social-icon img {
  width: 28px;
  height: auto;
}

.social-icon:hover {
  opacity: 0.8;
  transition: opacity 0.5s ease-in;
}

.footer-bottom {
  text-align: center;
  margin-top: 2rem;
  padding-top: 2rem;
  border-top: 1px solid #ffffff23;
}

@media screen and (max-width: 1024px) {
  .service-card {
    flex: 0 0 calc(50% - 1rem);
    min-width: calc(50% - 1rem);
    margin-right: 1rem;
  }
}

/* Responsive styles */
@media screen and (max-width: 768px) {
  nav {
    width: 100vw;
    flex-direction: column;
    align-items: center;
    padding: 2rem 0;
    border-radius: 0 0px 16px 16px;
    margin-bottom: 2rem;
    background-color: var(--brand-main);
  }
  .logo {
    color: white;
  }
  .nav-wrapper {
    display: flex;
    flex-direction: column;
    min-width: 0;
  }
  .nav-content {
    flex-direction: column;
  }
  .nav-links {
    margin-top: 1rem;
    flex-direction: column;
  }

  .nav-links li {
    margin-right: 0;
    color: white;
    margin-bottom: 0.5rem;
  }

  .nav-links li a {
    color: white;
  }
  .contact-btn {
    margin-top: 1rem;
  }

  .hero {
    flex-direction: column;
    text-align: center;
    padding: 1rem 5%;
  }
  .hero-container {
    flex-direction: column-reverse;
    width: 100%;
    align-items: center;
  }
  .hero-content {
    max-width: 100%;
  }
  .hero-image {
    max-width: 100%;
    width: fit-content;
    height: auto;
    margin-bottom: 2rem;
  }
  .hero-image-placeholder {
    display: flex;
    justify-content: flex-start;
  }

  .hero-content {
    width: 100%;
    margin-bottom: 2rem;
  }
  .hero-text {
    max-width: 100%;
    font-size: 14px;
  }

  .hero-title {
    font-size: 2rem;
    max-width: 100% !important
     ;
  }
  .hero-image {
    overflow: hidden;
  }
  .hero-image-placeholder {
    width: 100%;
    object-fit: contain;
  }

  .service-card {
    flex: 0 0 calc(85% - 1rem);
    min-width: calc(85% - 1rem);
    margin-right: 1rem;
  }

  .scroll-control {
    display: none;
  }
  .services-container {
    padding: 0;
  }
  .flex-container {
    min-width: 0px;
    padding: 1rem;
    height: auto;
    overflow: hidden;
  }
  .flex-section {
    flex-direction: column;
    text-align: center;
    padding: 1%;
    margin-bottom: 1rem;
  }
  .inner-container {
    width: 100%;
  }

  .flex-content,
  .flex-image {
    max-width: 100%;
    padding: 0;
  }

  .flex-content {
    margin-bottom: 2rem;
    padding: 0 1rem;
  }

  .flex-title {
    font-size: 2.2rem;
  }
  .flex-text {
    font-size: 14px;
    margin-bottom: 48px;
  }

  .flex-image-placeholder {
    height: auto;
  }

  .testimonial-section {
    padding: 2rem 5%;
  }
  .video-title {
    font-size: 2rem;
  }

  .play-icon {
    font-size: 3rem;
  }

  .play-text {
    font-size: 1rem;
  }
  .contact-container {
    flex-direction: column;
  }

  .contact-heading {
    text-align: center;
    padding-right: 0;
    margin-bottom: 2rem;
    width: 80%;
  }

  .contact-form {
    width: 100%;
  }

  .submit-btn {
    width: 100%;
  }
  .footer-container {
    text-align: center;
    flex-direction: column;
  }

  .footer-section {
    flex-basis: auto;
    justify-content: center;
    align-items: center;
    margin-bottom: 2rem;
  }
  .footer-section p {
    max-width: 100% !important;
  }
  .social-icons {
    justify-content: center;
  }
}

